--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
   "statusBar.foreground": "#e7e7e7",
   "statusBarItem.hoverBackground": "#51adf6"
 },
-"peacock.color": "#2196f3"
+"peacock.color": "#2196f3",
+"git.ignoreLimitWarning": true
 }
